--- a/README
+++ b/README
@@ -1,4 +1,11 @@
-構成
+only windows
+require node.js
+
+#
+npm install coffee-script@">=1.0.0 <2.0.0" -g
+
+#構成
 	atom-shell-exeが入ったディレクトリ/this sample
 
-とし、batファイルを起動。
+#exe
+batファイルを起動。
