auto reload. only(html, css, js).

--- a/README
+++ b/README
@@ -3,8 +3,9 @@ require node.js
 
 #
 npm install coffee-script@">=1.0.0 <2.0.0" -g
+もし要らなければ、batファイルからコメントアウトしてください。
 
-#構成
+構成
 	atom-shell-exeが入ったディレクトリ/this sample
 
 #exe
