set coffee compiler

--- a/README
+++ b/README
@@ -1,12 +1,10 @@
-only windows
-require node.js
-
-#
-npm install coffee-script@">=1.0.0 <2.0.0" -g
-もし要らなければ、batファイルからコメントアウトしてください。
 
 構成
 	atom-shell-exeが入ったディレクトリ/this sample
+#
+npm install
+
+contents内のjs,html,css 保存後、自動更新
 
 #exe
-batファイルを起動。
+run.batファイルを起動。
